convertidor-imagenes-web/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-api-deployment
  namespace: convertidor-imagenes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images-api
  template:
    metadata:
      labels:
        app: images-api
    spec:
      containers:
        - name: images-api-container
          image: dmolmar/images-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"   # Lowered request to 100m (adjust as needed)
              memory: "256Mi" # Adjust as needed
            limits:
              cpu: "1000m"  # Increased limit to 3000m (3 cores)
              memory: "1Gi" # Adjust as needed
          volumeMounts:
            - name: uploads
              mountPath: /data/uploads
            - name: temp-uploads
              mountPath: /data/temp-uploads  # Use temp-uploads (no underscore)
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc
        - name: temp-uploads
          persistentVolumeClaim:
            claimName: temp-uploads-pvc  # Use temp-uploads (no underscore)
