convertidor-imagenes-web/manifests/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-deployment
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:latest
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8443
              name: proxy-ssl
            - containerPort: 8001
              name: admin
          readinessProbe:
            httpGet:
              path: /status
              port: admin
            initialDelaySeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: admin
            initialDelaySeconds: 5
            timeoutSeconds: 5
      # Optional: Service Account if you need Kong to interact with the Kubernetes API
      # serviceAccountName: kong-serviceaccount
