convertidor-imagenes-web/manifests/opentelemetry-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-collector
  labels:
    app: opentelemetry-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry-collector
  template:
    metadata:
      labels:
        app: opentelemetry-collector
    spec:
      containers:
        - name: opentelemetry-collector
          image: otel/opentelemetry-collector-contrib:0.90.0  # You can use a specific version or latest
          command:
            - "/otelcol-contrib"
            - "--config=/conf/config.yaml"
          volumeMounts:
            - name: otel-collector-config-vol
              mountPath: /conf
          ports:
            - containerPort: 4317 # gRPC
              name: otlp-grpc
            - containerPort: 4318 # HTTP
              name: otlp-http
            - containerPort: 8889 # Prometheus metrics
              name: otel-prom
      volumes:
        - name: otel-collector-config-vol
          configMap:
            name: opentelemetry-collector-config
            items:
              - key: config.yaml
                path: config.yaml
