convertidor-imagenes-web/manifests/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik # Nombre del Deployment
  namespace: convertidor-imagenes # Namespace
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller # Cuenta de servicio para Traefik
      containers:
        - name: traefik
          image: traefik:v2.10 # Imagen de traefik
          args:
            - --api.insecure=true # Habilita la API insegura
            - --providers.kubernetesingress # Habilita el provider de Ingress de Kubernetes
            - --providers.kubernetescrd # Habilita el provider de CRD de Kubernetes
            - --entrypoints.web.address=:80 # Configura el entrypoint web
            - --providers.kubernetesingress.ingressclass=traefik # Configura la clase de Ingress
          ports:
            - name: web
              containerPort: 80 # Puerto del entrypoint web
            - name: admin
              containerPort: 8080 # Puerto del dashboard de admin
