convertidor-imagenes-web/manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: convertidor-imagenes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - worker
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: worker-container
        image: dmolmar/images-api:latest # Use your image here
        imagePullPolicy: Always
        command: ["python", "worker.py"]
        resources:
          requests:
            cpu: "500m"  # Lowered request to 500m
            memory: "512Mi" # Adjust as needed
          limits:
            cpu: "750m"  # Lowered limit to 750m (0.75 cores)
            memory: "1Gi" # Adjust as needed
        volumeMounts:
        - name: uploads
          mountPath: /data/uploads
        - name: temp-uploads
          mountPath: /data/temp-uploads  # Use temp-uploads (no underscore)
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
      - name: temp-uploads
        persistentVolumeClaim:
          claimName: temp-uploads-pvc  # Use temp-uploads (no underscore)
