convertidor-imagenes-web/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-api-service # Nombre del servicio
spec:
  selector:
    app: images-api # Selector para los pods del servicio
  ports:
    - protocol: TCP
      port: 5000 # Puerto del servicio
      targetPort: 5000 # Puerto del contenedor
