convertidor-imagenes-web/manifests/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
  labels:
    app: kong
spec:
  type: LoadBalancer # Or NodePort, depending on your setup
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
    - port: 8001 # Admin API port (optional, if you need to access it externally)
      targetPort: 8001
      protocol: TCP
      name: admin
  selector:
    app: kong
