convertidor-imagenes-web/manifests/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: convertidor-imagenes
spec:
  type: NodePort  # Change LoadBalancer to NodePort
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
