convertidor-imagenes-web/manifests/traefik-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: images-api-route
  namespace: convertidor-imagenes
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`) # Ensure you have the correct path prefix, and try also adding a rewrite middleware if needed
      kind: Rule
      services:
        - name: images-api-service # Double-check that this is the correct service name
          port: 5000
      middlewares: # optional, only if needed
        - name: strip-prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: convertidor-imagenes
spec:
  stripPrefix:
    prefixes:
      - /
